--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compileOnSave": true,
   "compilerOptions": {
     "sourceMap": true,
-    "module": "es6",
-    "target": "es5"
+    "module": "es2020",
+    "target": "es5",
+    "lib": ["ES2015", "DOM"]
   }
 }
