Changes, sorry, idk how to percisely describe.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "build": "tsc config.ts",
-    "clean": "rm config.js"
+    "build": "tsc config.ts"
   }
 }
