--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
   "files.exclude": {
     "**/.git": true,
-    "**/node_modules": true,
-
-    "**/*.js": true,
-    "**/*.map": true
+    "**/node_modules": true
   }
 }
