--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^5.3.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
+    "dev": "webpack serve",
     "build": "tsc config.ts"
   }
 }
