--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
@@ -9,6 +10,6 @@
   },
   "scripts": {
     "dev": "webpack serve",
-    "build": "tsc config.ts"
+    "build": "webpack"
   }
 }
