--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/chrome": "^0.0.139",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.1.2",
