--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compileOnSave": true,
   "compilerOptions": {
     "sourceMap": true,
-    "module": "es2020",
-    "target": "es5",
-    "lib": ["ES2015", "DOM"]
-  }
+    "module": "es6",
+    "target": "es6",
+    "lib": ["ES2015", "es2017", "DOM"],
+    "types": ["chrome"]
+  },
+  "exclude": ["node_modules"]
 }
