--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "webpack --watch",
     "build": "webpack"
   }
 }
