--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "sourceMap": true,
+    "sourceMap": false,
     "module": "es2020",
     "target": "es6",
     "lib": ["ES2015", "es2017", "DOM"],
