--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "@types/chrome": "^0.0.139",
     "awesome-typescript-loader": "^5.2.1",
@@ -10,7 +11,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "dev": "webpack --watch",
-    "build": "webpack"
+    "dev": "tsc && node dist/index.js > dist/index.html"
+  },
+  "dependencies": {
+    "@denizat/node_html": "^1.0.2"
   }
 }
