--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "sourceMap": true,
     "module": "es2020",
+    "moduleResolution": "node",
     "target": "es6",
+    "outDir": "dist",
     "lib": ["ES2015", "es2017", "DOM"],
     "types": ["chrome"]
   },
