--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "@types/chrome": "^0.0.139",
+    "@types/node": "^15.6.1",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.1.2",
@@ -14,6 +15,7 @@
     "dev": "tsc && node dist/index.js > dist/index.html"
   },
   "dependencies": {
-    "@denizat/node_html": "^1.0.2"
+    "@denizat/node_html": "^3.0.0",
+    "fs": "^0.0.1-security"
   }
 }
